--- a/mluilias.css
+++ b/mluilias.css
@@ -518,7 +518,7 @@ header[role="banner"] {
 	}
 	
 aside#userAccount {
-	padding: .2em 1em .3em 1em;
+	padding: .2em 1em .3em 0;
 	position: absolute;
 	right: 1%;
 	top: 0;
@@ -558,10 +558,11 @@ aside#userAccount {
 	
 	#mailNotification {
 		float: left;
-		margin-right: 1em;
 		display: block;
 		width: 24px;
 		height: 24px;
+		padding-left: 1em;
+		padding-right: 1em;
 		text-align: center
 	}
 
@@ -570,7 +571,8 @@ aside#userAccount {
 		clear: none;
 		font-size: .8em;
 		margin: 0;
-		padding: 0
+		padding: 0 1.5em;
+		border-left: 1px solid rgba(0, 81, 51, .1)
 	}
 
 /* Le notification bubble 
@@ -582,6 +584,8 @@ span.ilHActProp {
 	font: 10px/15px Helvetica, Verdana, Geneva, sans-serif;
 	text-shadow: 0 1px 1px #430f0f;
 	padding: 0 .4em;
+	margin-top: -1px;
+	margin-left: -4px;
 	text-align: center;
 	-webkit-box-shadow: 0px 2px 2px #888;
 	-moz-box-shadow: 0px 2px 2px #888;
